Bug 414890 - Palette Docker does not show swatches 9 Version: 4.3.0-prealpha (git 818c841)
Summary: Palette Docker does not show swatches 9 Version: 4.3.0-prealpha (git 818c841)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-06 11:44 UTC by Gremriel
Modified: 2020-01-09 19:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gremriel 2019-12-06 11:44:41 UTC
SUMMARY

None of the Palettes in the palette Docker will show any swatches, although you can access them via the dropdown menu. This works fine in 4.2.8

STEPS TO REPRODUCE

1.Open new canvas 
2.observe Palette Docker is empty; switching palettes does not work 
3. 

OBSERVED RESULT
Palette Docker stays empty

EXPECTED RESULT
Palette Docker should show swatches.

SOFTWARE/OS VERSIONS
Windows: Win10 64bit


ADDITIONAL INFORMATION
Krita

 Version: 4.3.0-prealpha (git 818c841)
 Languages: en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, nl_NL, nl, en_US, en
 Hidpi: false

Qt

  Version (compiled): 5.12.5
  Version (loaded): 5.12.5

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.17763
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10
Comment 1 Lynx3d 2019-12-07 01:01:10 UTC
Can confirm, and it's commit 97c03e0f that broke palette loading
https://invent.kde.org/kde/krita/commit/97c03e0f3314dae5520deb901dda73d1cf8df201
Comment 2 vanyossi 2019-12-19 07:07:29 UTC
Git commit ef55574a4af75134a2a9be03fcd70e8b16aaf614 by Ivan Yossi.
Committed on 19/12/2019 at 07:05.
Pushed by ivany into branch 'master'.

Fix PaletteDocker not showing palettes

Reverts 97c03e0f3314dae5520deb901dda73d1cf8df201

 "-1" is a QMap key to signal "root group"

Changed Q_ASSERT to KIS_ASSERT_RECOVER_RETURN_VALUE to
try and avoid crashing if Qt is compiled in debug mode.

M  +2    -5    libs/widgets/KisPaletteModel.cpp

https://invent.kde.org/kde/krita/commit/ef55574a4af75134a2a9be03fcd70e8b16aaf614
Comment 3 Halla Rempt 2020-01-08 13:56:22 UTC
Git commit 1a76a971ae4677ab984e3fd0111db26a442794f0 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 08/01/2020 at 13:33.
Pushed by rempt into branch 'krita/4.2'.

Fix PaletteDocker not showing palettes

Reverts 97c03e0f3314dae5520deb901dda73d1cf8df201

 "-1" is a QMap key to signal "root group"

Changed Q_ASSERT to KIS_ASSERT_RECOVER_RETURN_VALUE to
try and avoid crashing if Qt is compiled in debug mode.

M  +2    -2    libs/widgets/KisPaletteModel.cpp

https://invent.kde.org/kde/krita/commit/1a76a971ae4677ab984e3fd0111db26a442794f0
Comment 4 Halla Rempt 2020-01-08 15:32:48 UTC
Git commit 41dc9a8438035400983243fbc19d0290f3d06004 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 08/01/2020 at 15:32.
Pushed by rempt into branch 'krita/4.2'.

Fix PaletteDocker not showing palettes

Reverts 97c03e0f3314dae5520deb901dda73d1cf8df201

 "-1" is a QMap key to signal "root group"

Changed Q_ASSERT to KIS_ASSERT_RECOVER_RETURN_VALUE to
try and avoid crashing if Qt is compiled in debug mode.

M  +0    -3    libs/widgets/KisPaletteModel.cpp

https://invent.kde.org/kde/krita/commit/41dc9a8438035400983243fbc19d0290f3d06004
Comment 5 Lamarque V. Souza 2020-01-09 19:58:24 UTC
Git commit 8a0b7cbe060742024aca9169a03cc7d70ad1d71a by Lamarque V. Souza.
Committed on 09/01/2020 at 19:51.
Pushed by lvsouza into branch 'lvsouza/another_attempt_to_fix_crash_in_debug_mode'.

Commit 97c03e0f3314dae5520deb901dda73d1cf8df201 was reverted
by ef55574a4af75134a2a9be03fcd70e8b16aaf614 and then the crash
happens again.

I have tested this change and it does not break PalleteDocker.

PS: KIS_ASSERT_RECOVER_RETURN_VALUE trigger an assert and krita
fails to start up. KisPaletteModel::index works if I use
KIS_SAFE_ASSERT_RECOVER_RETURN_VALUE and change
KoColorSet::getGroup to return null pointer when its name
parameter is an empty string, but KisSwatchGroup::rowCount
crashes, so I think it is simpler to return an default
QModelIndex as soon as possible in KisPaletteModel::index

M  +3    -0    libs/widgets/KisPaletteModel.cpp

https://invent.kde.org/kde/krita/commit/8a0b7cbe060742024aca9169a03cc7d70ad1d71a