Fix PaletteDocker not showing palettes

Reverts 97c03e0f3314dae5520deb901dda73d1cf8df201

 "-1" is a QMap key to signal "root group"

Changed Q_ASSERT to KIS_ASSERT_RECOVER_RETURN_VALUE to
try and avoid crashing if Qt is compiled in debug mode.

BUG:414890